--- a/diccionarioPrueba/Base.lproj/Main.storyboard
+++ b/diccionarioPrueba/Base.lproj/Main.storyboard
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PoK-LJ-pBj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Hg6-b1-0Ya">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="ChalkboardSE.ttc">
+            <string>ChalkboardSE-Regular</string>
+        </array>
+        <array key="KohinoorBangla.ttc">
+            <string>KohinoorBangla-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller Responde-->
         <scene sceneID="qOf-Cq-1tL">
@@ -377,7 +385,7 @@ Como jugador tendrás tres oportunidades de fallar, al seleccionar una opción i
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nX4-zs-Rxa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Qfb-95-3Xu" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2225" y="-1602"/>
+            <point key="canvasLocation" x="2232" y="-1728"/>
         </scene>
         <!--ControllerJ3 Instrucciones-->
         <scene sceneID="Eig-zA-P94">
@@ -402,10 +410,21 @@ Como jugador tendrás tres oportunidades de fallar, al seleccionar una opción i
                                     <constraint firstAttribute="width" secondItem="A4W-pq-yI0" secondAttribute="height" multiplier="55:16" id="bKg-ei-Svf"/>
                                 </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Antes de empezar el juego, se te mostrara una seña. " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vmi-He-PJg">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Vmi-He-PJg">
                                 <rect key="frame" x="95" y="267" width="835" height="404"/>
                                 <color key="backgroundColor" red="0.39897312784092526" green="0.79423630898049391" blue="0.84345256979695438" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <mutableString key="text">Bienvenido al mini juego “Gravedad".
+
+Antes de empezar el juego, se te mostrará una seña. Tu objetivo es picarle a todos los cuadros que representen dicha seña, sea imagen o palabra. 
+
+¡Ten cuidado! Los cuadros iran cayendo, y si desaparece una seña correcta por debajo de la pantalla sin que hayas logrado picarle, se te restará una vida. También se te restara una vida si seleccionas un cuadro que no represente la seña que se te mostró antes de empezar el juego. 
+
+¡Tienes 5 vidas para este juego! 
+
+¡Por cada cuadro con la seña correcta que selecciones, te daremos 5 puntos!
+
+           ¡Éxito!</mutableString>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
@@ -665,10 +684,11 @@ Como jugador tendrás tres oportunidades de fallar, al seleccionar una opción i
                                     <action selector="clickJugar:" destination="guA-lZ-sge" eventType="touchUpInside" id="HDV-qz-05T"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Te toco el juego Memorama!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoh-h3-V6x">
-                                <rect key="frame" x="358.5" y="522" width="308.5" height="64"/>
-                                <color key="backgroundColor" red="0.72426581673026291" green="0.89192571880648164" blue="0.94925840736040612" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Te toco el juego Responde Rapido!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eoh-h3-V6x">
+                                <rect key="frame" x="272.5" y="522" width="480" height="64"/>
+                                <color key="backgroundColor" red="0.72416561841964722" green="0.88976049423217773" blue="0.94869738817214966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="480" id="HsL-kJ-5QC"/>
                                     <constraint firstAttribute="height" constant="64" id="QEa-I0-NTu"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
@@ -780,6 +800,21 @@ Como jugador tendrás tres oportunidades de fallar, al seleccionar una opción i
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EZn-6x-YYA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1534.6998535871155" y="-1742.578125"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="s9C-nH-z8g">
+            <objects>
+                <viewController id="ijp-71-Sng" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TD0-BC-fRr">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="rMJ-cR-x1N"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zxl-cS-1hV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084" y="-3260"/>
         </scene>
         <!--Memorama-->
         <scene sceneID="66E-sM-j5s">
